--- a/SampleProGetExtension/SampleProGetExtension.csproj
+++ b/SampleProGetExtension/SampleProGetExtension.csproj
@@ -42,14 +42,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PackageAdapters\SampleBeforeDownloadPackageAdapter.cs" />
     <Compile Include="PackageFilters\SamplePackageFilter.cs" />
     <Compile Include="PackageStores\SamplePackageStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
